--- a/Vidk/Views/Customers/New.cshtml
+++ b/Vidk/Views/Customers/New.cshtml
@@ -31,5 +31,10 @@
         @Html.ValidationMessageFor(m => m.Customer.MemberShipTypeId)
     </div>
         @Html.HiddenFor(m => m.Customer.Id)
+        @Html.AntiForgeryToken()
     <button type="submit"  class="btn btn-primary">Save</button>
+}
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval");
 }
